{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 224,
  "lineage": "b691c780-fdc7-c51a-31df-c02756e36c6a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-009724c2a50ee092d",
            "association_id": "eipassoc-03b04dedff87ad51f",
            "domain": "vpc",
            "id": "eipalloc-009724c2a50ee092d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0638f9f906ae91e8f",
            "private_dns": "ip-10-0-0-80.ec2.internal",
            "private_ip": "10.0.0.80",
            "public_dns": "ec2-34-200-38-80.compute-1.amazonaws.com",
            "public_ip": "34.200.38.80",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e266e1d9f5aefd22",
            "association_id": "eipassoc-030828fedf688498d",
            "domain": "vpc",
            "id": "eipalloc-0e266e1d9f5aefd22",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e17392f8f8379370",
            "private_dns": "ip-10-0-1-216.ec2.internal",
            "private_ip": "10.0.1.216",
            "public_dns": "ec2-107-20-248-153.compute-1.amazonaws.com",
            "public_ip": "107.20.248.153",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02362fb38cf2c877c",
            "association_id": "eipassoc-0164c7faadf713d4f",
            "domain": "vpc",
            "id": "eipalloc-02362fb38cf2c877c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0bcc2de4a0a6bf910",
            "private_dns": "ip-10-0-2-10.ec2.internal",
            "private_ip": "10.0.2.10",
            "public_dns": "ec2-54-166-198-22.compute-1.amazonaws.com",
            "public_ip": "54.166.198.22",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08da97c3bfd8acd50",
            "association_id": "eipassoc-074fc0cefa4d04ddc",
            "domain": "vpc",
            "id": "eipalloc-08da97c3bfd8acd50",
            "network_border_group": "us-east-1",
            "network_interface": "eni-091e6abab26f3d7ee",
            "private_dns": "ip-10-0-3-62.ec2.internal",
            "private_ip": "10.0.3.62",
            "public_dns": "ec2-34-197-168-244.compute-1.amazonaws.com",
            "public_ip": "34.197.168.244",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-035c3d0b5f2026427",
            "association_id": "eipassoc-0566cdc79be36f465",
            "domain": "vpc",
            "id": "eipalloc-035c3d0b5f2026427",
            "network_border_group": "us-east-1",
            "network_interface": "eni-006936be4b72e3a67",
            "private_dns": "ip-10-0-4-108.ec2.internal",
            "private_ip": "10.0.4.108",
            "public_dns": "ec2-18-205-95-154.compute-1.amazonaws.com",
            "public_ip": "18.205.95.154",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300554844083:internet-gateway/igw-02be6b73d94c2c8ff",
            "id": "igw-02be6b73d94c2c8ff",
            "owner_id": "300554844083",
            "tags": {
              "Name": "MainIGW"
            },
            "tags_all": {
              "Name": "MainIGW"
            },
            "vpc_id": "vpc-066310d36755abf83"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:300554844083:loadbalancer/app/full-service-lb/c9b0376b4ee340e6",
            "arn_suffix": "app/full-service-lb/c9b0376b4ee340e6",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-full-service-lb-590199907.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:300554844083:loadbalancer/app/full-service-lb/c9b0376b4ee340e6",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "full-service-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-042463c87a0da567e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0024130dc733b1077"
              },
              {
                "subnet_id": "subnet-00f065ca1b2531089"
              },
              {
                "subnet_id": "subnet-0232eb14f830183c4"
              },
              {
                "subnet_id": "subnet-02822c19f6b6dfdbc"
              },
              {
                "subnet_id": "subnet-03db5cae1b175e637"
              }
            ],
            "subnets": [
              "subnet-0024130dc733b1077",
              "subnet-00f065ca1b2531089",
              "subnet-0232eb14f830183c4",
              "subnet-02822c19f6b6dfdbc",
              "subnet-03db5cae1b175e637"
            ],
            "vpc_id": "vpc-066310d36755abf83",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:300554844083:listener/app/full-service-lb/c9b0376b4ee340e6/0e9d521bbf8f2028",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:300554844083:targetgroup/full-service-tg/d4a1761d51f4549b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:300554844083:listener/app/full-service-lb/c9b0376b4ee340e6/0e9d521bbf8f2028",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:300554844083:loadbalancer/app/full-service-lb/c9b0376b4ee340e6",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app_lb",
            "aws_lb_target_group.tg",
            "aws_security_group.alb_sg",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:300554844083:targetgroup/full-service-tg/d4a1761d51f4549b",
            "arn_suffix": "targetgroup/full-service-tg/d4a1761d51f4549b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:300554844083:targetgroup/full-service-tg/d4a1761d51f4549b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "full-service-tg",
            "port": 9090,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-066310d36755abf83"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-009724c2a50ee092d",
            "association_id": "eipassoc-03b04dedff87ad51f",
            "connectivity_type": "public",
            "id": "nat-0ecb365edd64b4bab",
            "network_interface_id": "eni-0638f9f906ae91e8f",
            "private_ip": "10.0.0.80",
            "public_ip": "34.200.38.80",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00a493567b2d20765"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e266e1d9f5aefd22",
            "association_id": "eipassoc-030828fedf688498d",
            "connectivity_type": "public",
            "id": "nat-0f185421c3d8e19af",
            "network_interface_id": "eni-0e17392f8f8379370",
            "private_ip": "10.0.1.216",
            "public_ip": "107.20.248.153",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c289b54fa135733e"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02362fb38cf2c877c",
            "association_id": "eipassoc-0164c7faadf713d4f",
            "connectivity_type": "public",
            "id": "nat-0bbad1ccf04d1655a",
            "network_interface_id": "eni-0bcc2de4a0a6bf910",
            "private_ip": "10.0.2.10",
            "public_ip": "54.166.198.22",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06dac502e342a1da6"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08da97c3bfd8acd50",
            "association_id": "eipassoc-074fc0cefa4d04ddc",
            "connectivity_type": "public",
            "id": "nat-03206755ff10f7c66",
            "network_interface_id": "eni-091e6abab26f3d7ee",
            "private_ip": "10.0.3.62",
            "public_ip": "34.197.168.244",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e7a18e7b185c6635"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-035c3d0b5f2026427",
            "association_id": "eipassoc-0566cdc79be36f465",
            "connectivity_type": "public",
            "id": "nat-0f9f651b70d1d59e7",
            "network_interface_id": "eni-006936be4b72e3a67",
            "private_ip": "10.0.4.108",
            "public_ip": "18.205.95.154",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00e57ef49f4d1380a"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300554844083:route-table/rtb-0c4d721db44649267",
            "id": "rtb-0c4d721db44649267",
            "owner_id": "300554844083",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ecb365edd64b4bab",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-066310d36755abf83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300554844083:route-table/rtb-09b8208ac350744f6",
            "id": "rtb-09b8208ac350744f6",
            "owner_id": "300554844083",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f185421c3d8e19af",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-066310d36755abf83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300554844083:route-table/rtb-0bc725d0f534a9fb0",
            "id": "rtb-0bc725d0f534a9fb0",
            "owner_id": "300554844083",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bbad1ccf04d1655a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-066310d36755abf83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300554844083:route-table/rtb-0286d3eefa0ccb5ba",
            "id": "rtb-0286d3eefa0ccb5ba",
            "owner_id": "300554844083",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03206755ff10f7c66",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-066310d36755abf83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300554844083:route-table/rtb-008450691588e2b33",
            "id": "rtb-008450691588e2b33",
            "owner_id": "300554844083",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f9f651b70d1d59e7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-066310d36755abf83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300554844083:route-table/rtb-0fd9a6a8df62ca1b0",
            "id": "rtb-0fd9a6a8df62ca1b0",
            "owner_id": "300554844083",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02be6b73d94c2c8ff",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-066310d36755abf83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05bcb0c2d98e8c063",
            "route_table_id": "rtb-0c4d721db44649267",
            "subnet_id": "subnet-0024130dc733b1077"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f5abd905d05ba1f",
            "route_table_id": "rtb-09b8208ac350744f6",
            "subnet_id": "subnet-02822c19f6b6dfdbc"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-010c037dc7957fc6a",
            "route_table_id": "rtb-0bc725d0f534a9fb0",
            "subnet_id": "subnet-03db5cae1b175e637"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8d1a6385654fe2d",
            "route_table_id": "rtb-0286d3eefa0ccb5ba",
            "subnet_id": "subnet-0232eb14f830183c4"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0619c70d6404baa54",
            "route_table_id": "rtb-008450691588e2b33",
            "subnet_id": "subnet-00f065ca1b2531089"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069713965f6f60919",
            "route_table_id": "rtb-0fd9a6a8df62ca1b0",
            "subnet_id": "subnet-00a493567b2d20765"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f85b98917f8c1b62",
            "route_table_id": "rtb-0fd9a6a8df62ca1b0",
            "subnet_id": "subnet-0c289b54fa135733e"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9770649d4ae903b",
            "route_table_id": "rtb-0fd9a6a8df62ca1b0",
            "subnet_id": "subnet-06dac502e342a1da6"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad996af2969c8f42",
            "route_table_id": "rtb-0fd9a6a8df62ca1b0",
            "subnet_id": "subnet-0e7a18e7b185c6635"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b33ef9bce382a03",
            "route_table_id": "rtb-0fd9a6a8df62ca1b0",
            "subnet_id": "subnet-00e57ef49f4d1380a"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300554844083:security-group/sg-042463c87a0da567e",
            "description": "Security group for internal ALB",
            "egress": [],
            "id": "sg-042463c87a0da567e",
            "ingress": [],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "300554844083",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-066310d36755abf83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300554844083:security-group/sg-0cbc5cedc876a0d41",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cbc5cedc876a0d41",
            "ingress": [],
            "name": "ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "300554844083",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-066310d36755abf83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300554844083:security-group/sg-0835d428e19a01416",
            "description": "Allow NFS for EFS",
            "egress": [],
            "id": "sg-0835d428e19a01416",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "efs-sg",
            "name_prefix": "",
            "owner_id": "300554844083",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-066310d36755abf83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300554844083:subnet/subnet-0024130dc733b1077",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0024130dc733b1077",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "300554844083",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet-0"
            },
            "tags_all": {
              "Name": "PrivateSubnet-0"
            },
            "vpc_id": "vpc-066310d36755abf83"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300554844083:subnet/subnet-02822c19f6b6dfdbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02822c19f6b6dfdbc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "300554844083",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet-1"
            },
            "tags_all": {
              "Name": "PrivateSubnet-1"
            },
            "vpc_id": "vpc-066310d36755abf83"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300554844083:subnet/subnet-03db5cae1b175e637",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03db5cae1b175e637",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "300554844083",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet-2"
            },
            "tags_all": {
              "Name": "PrivateSubnet-2"
            },
            "vpc_id": "vpc-066310d36755abf83"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300554844083:subnet/subnet-0232eb14f830183c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0232eb14f830183c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "300554844083",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet-3"
            },
            "tags_all": {
              "Name": "PrivateSubnet-3"
            },
            "vpc_id": "vpc-066310d36755abf83"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300554844083:subnet/subnet-00f065ca1b2531089",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f065ca1b2531089",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "300554844083",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet-4"
            },
            "tags_all": {
              "Name": "PrivateSubnet-4"
            },
            "vpc_id": "vpc-066310d36755abf83"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300554844083:subnet/subnet-00a493567b2d20765",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a493567b2d20765",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "300554844083",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet-0"
            },
            "tags_all": {
              "Name": "PublicSubnet-0"
            },
            "vpc_id": "vpc-066310d36755abf83"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300554844083:subnet/subnet-0c289b54fa135733e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c289b54fa135733e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "300554844083",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet-1"
            },
            "tags_all": {
              "Name": "PublicSubnet-1"
            },
            "vpc_id": "vpc-066310d36755abf83"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300554844083:subnet/subnet-06dac502e342a1da6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06dac502e342a1da6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "300554844083",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet-2"
            },
            "tags_all": {
              "Name": "PublicSubnet-2"
            },
            "vpc_id": "vpc-066310d36755abf83"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300554844083:subnet/subnet-0e7a18e7b185c6635",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7a18e7b185c6635",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "300554844083",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet-3"
            },
            "tags_all": {
              "Name": "PublicSubnet-3"
            },
            "vpc_id": "vpc-066310d36755abf83"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300554844083:subnet/subnet-00e57ef49f4d1380a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e57ef49f4d1380a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "300554844083",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet-4"
            },
            "tags_all": {
              "Name": "PublicSubnet-4"
            },
            "vpc_id": "vpc-066310d36755abf83"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300554844083:vpc/vpc-066310d36755abf83",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0aeb8e5531934479f",
            "default_route_table_id": "rtb-030f95ca60772dc1e",
            "default_security_group_id": "sg-05c86551a2b9985bc",
            "dhcp_options_id": "dopt-08495b342795b9e9f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-066310d36755abf83",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-030f95ca60772dc1e",
            "owner_id": "300554844083",
            "tags": {
              "Name": "CryptoVPC"
            },
            "tags_all": {
              "Name": "CryptoVPC"
            }
          }
        }
      ]
    }
  ]
}